--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
-Imports: shiny
+Imports: shiny, htmltools
