--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(browserViewer)
 export(buttonBlock)
 export(contentPanel)
 export(dialogViewer)
-export(fillPage)
 export(gadgetPage)
 export(paneViewer)
 export(runGadget)
@@ -12,3 +11,4 @@ export(tabstripPanel)
 export(titlebar)
 export(titlebarButton)
 import(shiny)
+importFrom(htmltools,css)
