--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(gadgetTitleBar)
 export(miniButtonBlock)
 export(miniContentPanel)
 export(miniPage)
+export(miniTabPanel)
 export(miniTabstripPanel)
 export(miniTitleBar)
 export(miniTitleBarButton)
