--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,9 @@ Authors@R: c(
 Description: Provides UI widget and layout functions for writing Shiny apps
     that work well on small screens.
 License: GPL-3
-LazyData: TRUE
 Imports:
     shiny (>= 0.13),
     htmltools (>= 0.3),
     utils
-RoxygenNote: 5.0.1
+RoxygenNote: 7.3.2
+Encoding: UTF-8
